Add jar run argument